syntax = "proto2";

package udfs.proto;

message EmptyMessage {}

message DataNodeInfo {
    required string address = 1;
    required uint64 available = 2;
    required uint64 used = 3;
}

message Block {
    required uint64 id = 1;
    required uint64 len = 2;
}

