syntax = "proto2";

import "common.proto";

package udfs.proto;

service NodeProtocol {
    rpc heartbeat(HeartbeatMessage) returns (EmptyMessage);
}


message HeartbeatMessage {
    required string address = 1;
    required uint64 available = 2;
    required uint64 used = 3;
}
